WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
148428
Fix the all-in-one build with GCC
https://bugs.webkit.org/show_bug.cgi?id=148428
Summary
Fix the all-in-one build with GCC
Csaba Osztrogonác
Reported
2015-08-25 05:54:06 PDT
The all-in-one build is broken with GCC (works fine with Clang) since Indexed DB is enabled: ../../Source/WebCore/inspector/InspectorIndexedDBAgent.cpp:718:7: error: 'WebCore::ClearObjectStore' has a field 'WebCore::ClearObjectStore::<anonymous>' whose type uses the anonymous namespace [-Werror] ../../Source/WebCore/inspector/InspectorIndexedDBAgent.cpp:718:7: error: 'WebCore::ClearObjectStore' has a base 'WebCore::{anonymous}::ExecutableWithDatabase' whose type uses the anonymous namespace [-Werror] A possible workaround is removing InspectorIndexedDBAgent.cpp from Source/WebCore/inspector/InspectorAllInOne.cpp until we find the proper fix.
Attachments
Patch
(3.70 KB, patch)
2015-09-21 04:54 PDT
,
Csaba Osztrogonác
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Csaba Osztrogonác
Comment 1
2015-09-21 04:54:40 PDT
Created
attachment 261645
[details]
Patch
Darin Adler
Comment 2
2015-09-21 16:37:21 PDT
Comment on
attachment 261645
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=261645&action=review
> Source/WebCore/ChangeLog:3 > + [EFL] Fix the all-in-one build with GCC
How is this specific to EFL?
Csaba Osztrogonác
Comment 3
2015-09-22 03:04:18 PDT
(In reply to
comment #2
)
> Comment on
attachment 261645
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=261645&action=review
> > > Source/WebCore/ChangeLog:3 > > + [EFL] Fix the all-in-one build with GCC > > How is this specific to EFL?
Good point, I think nohow.
Csaba Osztrogonác
Comment 4
2015-09-22 03:06:30 PDT
Committed
r190112
: <
http://trac.webkit.org/changeset/190112
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug