Fix the all-in-one build with GCC https://bugs.webkit.org/show_bug.cgi?id=148428

Reviewed by Darin Adler.

Removed Source/WebCore/inspector/InspectorIndexedDBAgent.cpp from the all-in-one build.

* WebCore.vcxproj/WebCore.vcxproj:
* inspector/InspectorAllInOne.cpp:

Canonical link: https://commits.webkit.org/167543@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@190112 268f45cc-cd09-0410-ab3c-d52691b4dbfc